tests/e2e/unary_complex_3b.story
b = 42
t = 21
a = [! b, !2] <= ! t + t
